syntax = "proto3";

package reservation;

option java_multiple_files = true;
option java_package = "com.roomreservation.contracts.reservation.grpc";

service ReservationGrpcService {
  rpc HasActiveReservationsForRoom(HasActiveReservationsForRoomRequest)
      returns (HasActiveReservationsForRoomResponse);
}

message HasActiveReservationsForRoomRequest {
  int64 roomId = 1;
}

message HasActiveReservationsForRoomResponse {
  bool hasActive = 1;
}
